--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/shubham-patil19" class="btn btn-primary py-3 px-4">LinkedIn</a> 
-							<a href="https://github.com/shubhp19" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+							<a href="https://github.com/shubhp19" class="btn btn-white btn-outline-white py-3 px-4">My work</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -504,7 +504,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="500">0</strong>
+                <strong class="number" data-number="10">0</strong>
                 <span>Cups of coffee</span>
               </div>
             </div>
