--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 									<li class="d-flex"><span>Databases:</span> <span>MySQL, PostgreSQL, Oracle DB, MongoDB, Microsoft SQL Server, Azure SQL Database</span></li>
 									<li class="d-flex"><span>Certifications</span> <span>Microsoft Power BI Data Analyst Associate (PL-300), Appian Associate Developer, Microsoft Certified: Azure Data
 										Engineer Associate (DP-203), The Ultimate MySQL Bootcamp (Udemy).</span></li>
-									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, QuickInsights , Tableau</span></li>
+									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, QuickInsight , Tableau</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>Cloud, Excel, Git, JIRA, Confluence</span></li>
 									<!-- <li class="d-flex"><span>Interest:</span> <span>Traveling, </span></li> -->
 									
