--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
 			            <h2>Data Enthusiast</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.linkedin.com/in/shubham-patil19" class="btn btn-primary py-3 px-4">LinkedIn</a> 
-							<a href="https://github.com/shubhp19" class="btn btn-white btn-outline-white py-3 px-4">My work</a></p>
+			            <p><a href="https://www.linkedin.com/in/shubham-patil19" class="btn btn-primary py-3 px-4"target="_blank">LinkedIn</a> 
+							<a href="https://github.com/shubhp19" class="btn btn-white btn-outline-white py-3 px-4"target="_blank">My work</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -294,7 +294,7 @@
 									<span class="number" data-number="10">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/shubham-patil19/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/shubham-patil19/" class="btn btn-primary py-3 px-3"target="_blank">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -387,7 +387,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1Ew3IorklCjURjMyIE9aGxgwSmFtgtxDa/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1Ew3IorklCjURjMyIE9aGxgwSmFtgtxDa/view?usp=drive_link" class="btn btn-primary py-4 px-5"target="_blank">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -407,7 +407,7 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/shubhp19/Revenue-Analysis" class="block-20 zoom-effect" style="background-image: url('images/Revenue-Dashboard.png');">
+              <a href="https://github.com/shubhp19/Revenue-Analysis" class="block-20 zoom-effect" target="_blank" style="background-image: url('images/Revenue-Dashboard.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -418,7 +418,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/shubhp19/US-Based-Disease-Analysis" class="block-20 zoom-effect" style="background-image: url('images/Healthcare.jpg');">
+              <a href="https://github.com/shubhp19/US-Based-Disease-Analysis" class="block-20 zoom-effect" target="_blank" style="background-image: url('images/Healthcare.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -429,7 +429,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/shubhp19/Sales-Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://github.com/shubhp19/Sales-Analysis" class="block-20 zoom-effect" target="_blank" style="background-image: url('images/proj_3.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -444,7 +444,7 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/shubhp19/Youtube-Trend-Analysis" class="block-20 zoom-effect" style="background-image: url('images/Youtube_Trend.jpg');">
+				<a href="https://github.com/shubhp19/Youtube-Trend-Analysis" class="block-20 zoom-effect" target="_blank" style="background-image: url('images/Youtube_Trend.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -455,7 +455,7 @@
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/shubhp19/Market-Segmentation" class="block-20 zoom-effect" style="background-image: url('images/Customer_segmentation.png');">
+				<a href="https://github.com/shubhp19/Market-Segmentation" class="block-20 zoom-effect" target="_blank" style="background-image: url('images/Customer_segmentation.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -519,7 +519,7 @@
 						<h2>More projects on<span> Github  </span> </h2>
 						<div class="heading"> <h4>Exploring the depths of business challenges fuels my passion, uncovering the untold stories hidden within datasets. </h4>
 						<br>
-						<p><a href="https://github.com/shubhp19" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/shubhp19" class="btn btn-primary py-3 px-5" target="_blank">GitHub</a></p>
 						</div>
 					</div>
 				</div>
@@ -555,7 +555,7 @@
 							<span class="icon-paper-plane"></span>
 						</div>
 						<h3 class="mb-4">Email Address</h3>
-						<p><a href="mailto:spatil29@syr.edu">spatil29@syr.edu</a></p>
+						<p><a href="mailto:spatil29@syr.edu"target="_blank">spatil29@syr.edu</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -564,7 +564,7 @@
 							<span class="icon-globe"></span>
 						</div>
 						<h3 class="mb-4">Download Resume</h3>
-						<p><a href="https://drive.google.com/file/d/1Ew3IorklCjURjMyIE9aGxgwSmFtgtxDa/view?usp=drive_link">Resumelink</a></p>
+						<p><a href="https://drive.google.com/file/d/1Ew3IorklCjURjMyIE9aGxgwSmFtgtxDa/view?usp=drive_link" target="_blank">Resumelink</a></p>
 					</div>
 				</div>
 			</div>
