--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						// Create an array of typing text
 						const typingTexts = [
 						'Data Analyst  ',
-						'Data Engineer  ',
+						'Business Analyst ',
 						'Data Scientist  ',
 						];
 
