--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
 						<span class="position">Infosys Limited</span>
 						<p class="mt-4">Infosys Limited, a global technology consulting powerhouse, boasts a vast team of skilled professionals, delivering transformative solutions and driving digital innovation for businesses worldwide. 
 							<ul>
-								<li>Boosted revenue by 71% through real-time client insights using key performance indicators, showcasing the risk probability index.</li>
-								<li>Implemented an SQL script to simulate client triggers for testing purposes.</li>
-								<li>Created and deployed 25+ interactive financial monitoring reports using Power BI Desktop and Server, featuring scheduled data refresh for real-time insights.</li>
+								<li>Achieved a 20% increase in revenue by leveraging real-time analytics and KPIs to enhance client risk assessment.</li>
+								<li>Engineered SQL scripts to meticulously simulate client scenarios, optimizing testing efficacy.</li>
+								<li>Organized design and deployment of over 10+ Power BI interactive reports and dashboards, enriching banking financial transaction oversight with scheduled data refreshes.</li>
 							</ul>
 						</p>
 					</div>
@@ -346,9 +346,9 @@
 						<span class="position">Incredible Solutions</span>
 						<p class="mt-4">Incredible Solutions, a startup committed to innovation and creativity, centered its services on delivering impactful solutions to clients.
 							<ul>
-								<li>Embarking on an immersive internship experience, I delved into advanced Python programming concepts, diligently refining my skills while also mastering intricate aspects of Excel and SQL.</li>
-								<li>Collaborated closely with an experienced data analysis team to streamline data processing and improve data visualization</li>
-								<li>Took charge of data testing procedures to ensure the highest level of data quality and reliability.</li>
+								<li>Gathered data from the company and conducted analysis on products to gain insights and support decision-making processes.</li>
+								<li>Collaborated closely with an experienced data analysis team to streamline data processing and improve data visualization by 50% using Microsoft Excel and Python.</li>
+								<li>•	Conducted thorough market research and analysis to identify key trends and opportunities, significantly enhancing the company's market position and competitiveness.</li>
 							</ul>
 						</p>
 					</div>
