--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 							<ul>
 								<li>Gathered data from the company and conducted analysis on products to gain insights and support decision-making processes.</li>
 								<li>Collaborated closely with an experienced data analysis team to streamline data processing and improve data visualization by 50% using Microsoft Excel and Python.</li>
-								<li>•	Conducted thorough market research and analysis to identify key trends and opportunities, significantly enhancing the company's market position and competitiveness.</li>
+								<li>Conducted thorough market research and analysis to identify key trends and opportunities, significantly enhancing the company's market position and competitiveness.</li>
 							</ul>
 						</p>
 					</div>
