--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
 						<span class="position">Infosys Limited</span>
 						<p class="mt-4">Infosys Limited, a global technology consulting powerhouse, boasts a vast team of skilled professionals, delivering transformative solutions and driving digital innovation for businesses worldwide. 
 							<ul>
-								<li>Achieved a 20% increase in revenue by leveraging real-time analytics and KPIs to enhance client risk assessment.</li>
-								<li>Engineered SQL scripts to meticulously simulate client scenarios, optimizing testing efficacy.</li>
-								<li>Organized design and deployment of over 10+ Power BI interactive reports and dashboards, enriching banking financial transaction oversight with scheduled data refreshes.</li>
+								<li>Developed 10+ Power BI dashboards, enhancing banking data visualization and providing actionable insights into financial trends and performance.</li>
+								<li>Achieved a 0.32% increase in revenue by leveraging real-time analytics and KPIs to enhance client risk assessment.</li>
+								<li>Applied SQL scripts to simulate client scenarios, optimizing testing efficacy.</li>
 							</ul>
 						</p>
 					</div>
@@ -347,8 +347,8 @@
 						<p class="mt-4">Incredible Solutions, a startup committed to innovation and creativity, centered its services on delivering impactful solutions to clients.
 							<ul>
 								<li>Gathered data from the company and conducted analysis on products to gain insights and support decision-making processes.</li>
-								<li>Collaborated closely with an experienced data analysis team to streamline data processing and improve data visualization by 50% using Microsoft Excel and Python.</li>
-								<li>Conducted thorough market research and analysis to identify key trends and opportunities, significantly enhancing the company's market position and competitiveness.</li>
+								<li>Conducted thorough analysis and visualization using Python-based predictive models, aiding clients in competing in the market.</li>
+								<li>Analyzed customer purchase data using SQL queries to identify top buying trends, resulting in a 10% increase in sales.</li>
 							</ul>
 						</p>
 					</div>
