--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2024-2024</span>
 						<h2>IT Analyst Intern</h2>
-						<span class="position">Steve Madden</span>
+						<span class="position">Steve Madden, New York</span>
 						<p class="mt-4">Steve Madden, a leading global footwear and fashion brand, is renowned for its trendsetting designs and innovative approach to style. With a dynamic team of professionals, Steve Madden is committed to delivering high-quality, fashion-forward products while staying at the forefront of the footwear and accessories industry.
 							<ul>
 								<li>Generated sales reports by gathering data from Infor M3 and converting it into a format that Power BI could use, helping improve decision-making and sales results.</li>
