--- a/index.html
+++ b/index.html
@@ -325,6 +325,22 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
+						<span class="date">2024-2024</span>
+						<h2>IT Analyst Intern</h2>
+						<span class="position">Steve Madden, New York</span>
+						<p class="mt-4">Steve Madden, a leading global footwear and fashion brand, is renowned for its trendsetting designs and innovative approach to style. With a dynamic team of professionals, Steve Madden is committed to delivering high-quality, fashion-forward products while staying at the forefront of the footwear and accessories industry.
+							<ul>
+								<li>Generated sales reports by gathering data from Infor M3 and converting it into a format that Power BI could use, helping improve decision-making and sales results.</li>
+								<li>Worked closely with both development and product teams to resolve over 10 issues, improving teamwork and increasing project efficiency by 20%.</li>
+								<li>Collected and analyzed data from Predict Spring and WinSQL to assess wholesale performance, which helped reduce excess inventory by 5%.</li>
+
+							</ul>
+						</p>
+					</div>
+
+				</div>
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
 						<span class="date">2021-2023</span>
 						<h2>Senior System Engineer</h2>
 						<span class="position">Infosys Limited</span>
@@ -333,6 +349,21 @@
 								<li>Developed 10+ Power BI dashboards, enhancing banking data visualization and providing actionable insights into financial trends and performance.</li>
 								<li>Achieved a 0.32% increase in revenue by leveraging real-time analytics and KPIs to enhance client risk assessment.</li>
 								<li>Applied SQL scripts to simulate client scenarios, optimizing testing efficacy.</li>
+							</ul>
+						</p>
+					</div>
+
+				</div>
+							<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">2020-2021</span>
+						<h2>Product Manager Intern</h2>
+						<span class="position">Society of Visual Impaired </span>
+						<p class="mt-4">The Society of Visual Impaired is dedicated to empowering individuals with visual impairments by providing resources, support, and advocacy. Through education, rehabilitation, and community programs, the society strives to enhance the quality of life for visually impaired people, enabling them to lead independent and fulfilling lives.
+							<ul>
+								<li>Led a 25-member Agile team in developing a user-friendly website for the Rehabilitation Society of Visually Impaired, enhancing digital presence and accessibility.</li>
+								<li>Implemented Scrum calls and Agile processes, ensuring efficient project management and timely delivery.</li>
+								<li>Managed training program in MongoDB, Express.js, Node.js, and production-level coding, resulting in a 30% increase in NGO visibility and improved service delivery to the visually impaired community.</li>
 							</ul>
 						</p>
 					</div>
@@ -354,22 +385,7 @@
 					</div>
 
 				</div>
-			<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2024-2024</span>
-						<h2>IT Analyst Intern</h2>
-						<span class="position">Steve Madden, New York</span>
-						<p class="mt-4">Steve Madden, a leading global footwear and fashion brand, is renowned for its trendsetting designs and innovative approach to style. With a dynamic team of professionals, Steve Madden is committed to delivering high-quality, fashion-forward products while staying at the forefront of the footwear and accessories industry.
-							<ul>
-								<li>Generated sales reports by gathering data from Infor M3 and converting it into a format that Power BI could use, helping improve decision-making and sales results.</li>
-								<li>Worked closely with both development and product teams to resolve over 10 issues, improving teamwork and increasing project efficiency by 20%.</li>
-								<li>Collected and analyzed data from Predict Spring and WinSQL to assess wholesale performance, which helped reduce excess inventory by 5%.</li>
 
-							</ul>
-						</p>
-					</div>
-
-				</div>
 			</div>
 
 		<br>
