--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 						<span class="date">2024-2024</span>
 						<h2>IT Analyst Intern</h2>
 						<span class="position">Steve Madden, New York</span>
-						<p class="mt-4">Steve Madden, a leading global footwear and fashion brand, is renowned for its trendsetting designs and innovative approach to style. With a dynamic team of professionals, Steve Madden is committed to delivering high-quality, fashion-forward products while staying at the forefront of the footwear and accessories industry.
+						<p class="mt-4">Steve Madden is a global leader in footwear and fashion, known for its innovative designs and commitment to high-quality, stylish products. With a dynamic team, the brand stays at the forefront of the footwear and accessories industry.
 							<ul>
 								<li>Generated sales reports by gathering data from Infor M3 and converting it into a format that Power BI could use, helping improve decision-making and sales results.</li>
 								<li>Worked closely with both development and product teams to resolve over 10 issues, improving teamwork and increasing project efficiency by 20%.</li>
@@ -359,7 +359,7 @@
 						<span class="date">2020-2021</span>
 						<h2>Product Manager Intern</h2>
 						<span class="position">Society of Visual Impaired </span>
-						<p class="mt-4">The Society of Visual Impaired is dedicated to empowering individuals with visual impairments by providing resources, support, and advocacy. Through education, rehabilitation, and community programs, the society strives to enhance the quality of life for visually impaired people, enabling them to lead independent and fulfilling lives.
+						<p class="mt-4">The Society of Visual Impaired empowers individuals with visual impairments by providing resources, support, and advocacy to enhance their quality of life and independence.
 							<ul>
 								<li>Led a 25-member Agile team in developing a user-friendly website for the Rehabilitation Society of Visually Impaired, enhancing digital presence and accessibility.</li>
 								<li>Implemented Scrum calls and Agile processes, ensuring efficient project management and timely delivery.</li>
