--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 						<span class="date">2024-2024</span>
 						<h2>IT Analyst Intern</h2>
 						<span class="position">Steve Madden, New York</span>
-						<p class="mt-4">Steve Madden is a global leader in footwear and fashion, known for its innovative designs and commitment to high-quality, stylish products. With a dynamic team, the brand stays at the forefront of the footwear and accessories industry.
+						<p class="mt-4">Steve Madden is a global leader in footwear and fashion, known for its innovative designs and commitment to high-quality, stylish products.
 							<ul>
 								<li>Generated sales reports by gathering data from Infor M3 and converting it into a format that Power BI could use, helping improve decision-making and sales results.</li>
 								<li>Worked closely with both development and product teams to resolve over 10 issues, improving teamwork and increasing project efficiency by 20%.</li>
@@ -363,7 +363,7 @@
 							<ul>
 								<li>Led a 25-member Agile team in developing a user-friendly website for the Rehabilitation Society of Visually Impaired, enhancing digital presence and accessibility.</li>
 								<li>Implemented Scrum calls and Agile processes, ensuring efficient project management and timely delivery.</li>
-								<li>Managed training program in MongoDB, Express.js, Node.js, and production-level coding, resulting in a 30% increase in NGO visibility and improved service delivery to the visually impaired community.</li>
+								<li>Managed training program in MongoDB, Express.js, Node.js, and production-level coding, resulting in a 30% increase in NGO visibility.</li>
 							</ul>
 						</p>
 					</div>
