--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 							<ul>
 								<li>Developed 10+ Power BI dashboards, enhancing banking data visualization and providing actionable insights into financial trends and performance.</li>
 								<li>Achieved a 0.32% increase in revenue by leveraging real-time analytics and KPIs to enhance client risk assessment.</li>
-								<li>Applied SQL scripts to simulate client scenarios, optimizing testing efficacy.</li>
+								<li>Applied advanced SQL scripts to simulate client scenarios, optimizing testing efficacy and improving overall process accuracy.</li>
 							</ul>
 						</p>
 					</div>
@@ -359,7 +359,7 @@
 						<span class="date">2020-2021</span>
 						<h2>Product Manager Intern</h2>
 						<span class="position">Society of Visual Impaired </span>
-						<p class="mt-4">The Society of Visual Impaired empowers individuals with visual impairments by providing resources, support, and advocacy to enhance their quality of life and independence.
+						<p class="mt-4">The Society of Visual Impaired empowers individuals with visual impairments by providing resources, support, and advocacy.
 							<ul>
 								<li>Led a 25-member Agile team in developing a user-friendly website for the Rehabilitation Society of Visually Impaired, enhancing digital presence and accessibility.</li>
 								<li>Implemented Scrum calls and Agile processes, ensuring efficient project management and timely delivery.</li>
@@ -419,7 +419,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1AdiQ5aInpLPO2qsf4aEkv7XkkhKxVO-6/view?usp=drive_link" class="btn btn-primary py-4 px-5"target="_blank">Download CV</a></p>
+    				<p><a href="https://drive.google.com/drive/folders/1sDna0puvgCzcp5yvybZ-pxuggpp8Exrt?dmr=1&ec=wgc-drive-hero-goto" class="btn btn-primary py-4 px-5"target="_blank">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -596,7 +596,7 @@
 							<span class="icon-globe"></span>
 						</div>
 						<h3 class="mb-4">Download Resume</h3>
-						<p><a href="https://drive.google.com/file/d/1AdiQ5aInpLPO2qsf4aEkv7XkkhKxVO-6/view?usp=drive_link" target="_blank">Resumelink</a></p>
+						<p><a href="https://drive.google.com/drive/folders/1sDna0puvgCzcp5yvybZ-pxuggpp8Exrt?dmr=1&ec=wgc-drive-hero-goto" target="_blank">Resumelink</a></p>
 					</div>
 				</div>
 			</div>
