--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 						<span class="position">Society of Visual Impaired </span>
 						<p class="mt-4">The Society of Visual Impaired empowers individuals with visual impairments by providing resources, support, and advocacy.
 							<ul>
-								<li>Led a 25-member Agile team in developing a user-friendly website for the Rehabilitation Society of Visually Impaired, enhancing digital presence and accessibility.</li>
+								<li>Led a 25-member Agile team in developing a user-friendly website for the Rehabilitation Society of Visually Impaired, enhancing digital presence.</li>
 								<li>Implemented Scrum calls and Agile processes, ensuring efficient project management and timely delivery.</li>
 								<li>Managed training program in MongoDB, Express.js, Node.js, and production-level coding, resulting in a 30% increase in NGO visibility.</li>
 							</ul>
