--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 				</div>
 							<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2020-2021</span>
+						<span class="date">2021-2021</span>
 						<h2>Product Manager Intern</h2>
 						<span class="position">Society of Visual Impaired </span>
 						<p class="mt-4">The Society of Visual Impaired empowers individuals with visual impairments by providing resources, support, and advocacy.
@@ -419,7 +419,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/drive/folders/1sDna0puvgCzcp5yvybZ-pxuggpp8Exrt?dmr=1&ec=wgc-drive-hero-goto" class="btn btn-primary py-4 px-5"target="_blank">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1KMNHWwvN2M8CPHbj5vg0mR99F5ZXETlC/view?usp=sharing" class="btn btn-primary py-4 px-5"target="_blank">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -596,7 +596,7 @@
 							<span class="icon-globe"></span>
 						</div>
 						<h3 class="mb-4">Download Resume</h3>
-						<p><a href="https://drive.google.com/drive/folders/1sDna0puvgCzcp5yvybZ-pxuggpp8Exrt?dmr=1&ec=wgc-drive-hero-goto" target="_blank">Resumelink</a></p>
+						<p><a href="https://drive.google.com/file/d/1KMNHWwvN2M8CPHbj5vg0mR99F5ZXETlC/view?usp=sharing" target="_blank">Resumelink</a></p>
 					</div>
 				</div>
 			</div>
