--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Shubham Patil</span></p>
-										<p><span class="title-s">Job Role: </span> <span>System Engineer</span></p>
-										<p><span class="title-s">Experience: </span> <span>2 years </span></p>
-										<p><span class="title-s">Address: </span> <span>Mumbai, India</span></p>
+										<p><span class="title-s">Job Role: </span> <span>Analyst</span></p>
+										<p><span class="title-s">Experience: </span> <span>+2 years </span></p>
+										<p><span class="title-s">Address: </span> <span>New York, USA</span></p>
 									  </div>
 									</div>
 								  </div>
