--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1KMNHWwvN2M8CPHbj5vg0mR99F5ZXETlC/view?usp=sharing" class="btn btn-primary py-4 px-5"target="_blank">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1dUCQWBz6l0TMWQjbIH-uCTZ_j5g2nig6/view?usp=drive_link" class="btn btn-primary py-4 px-5"target="_blank">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -596,7 +596,7 @@
 							<span class="icon-globe"></span>
 						</div>
 						<h3 class="mb-4">Download Resume</h3>
-						<p><a href="https://drive.google.com/file/d/1KMNHWwvN2M8CPHbj5vg0mR99F5ZXETlC/view?usp=sharing" target="_blank">Resumelink</a></p>
+						<p><a href="https://drive.google.com/file/d/1dUCQWBz6l0TMWQjbIH-uCTZ_j5g2nig6/view?usp=drive_link" target="_blank">Resumelink</a></p>
 					</div>
 				</div>
 			</div>
