--- a/index.html
+++ b/index.html
@@ -320,78 +320,89 @@
 			<h1 class="big-4">Experience</h1>
 			<div class="underline"></div>
 		</div>
-		<br>
-		
-		<div class="row">
-				<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2024-2024</span>
-						<h2>IT Analyst Intern</h2>
-						<span class="position">Steve Madden, New York</span>
-						<p class="mt-4">Steve Madden is a global leader in footwear and fashion, known for its innovative designs and commitment to high-quality, stylish products.
-							<ul>
-								<li>Generated sales reports by gathering data from Infor M3 and converting it into a format that Power BI could use, helping improve decision-making and sales results.</li>
-								<li>Worked closely with both development and product teams to resolve over 10 issues, improving teamwork and increasing project efficiency by 20%.</li>
-								<li>Collected and analyzed data from Predict Spring and WinSQL to assess wholesale performance, which helped reduce excess inventory by 5%.</li>
+<br>
 
-							</ul>
-						</p>
-					</div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+            <span class="date">2025-Present</span>
+            <h2>AI Engineer</h2>
+            <span class="position">Syracuse University, New York</span>
+            <p class="mt-4">Syracuse University, a renowned research institution, fosters innovation and cutting-edge development in AI and data science.
+                <ul>
+                    <li>Optimized large language models (LLMs) through quantization and prompt tuning, reducing inference latency and enabling high-throughput performance under limited compute resources.</li>
+                    <li>Built a scalable RAG-based LLM chatbot using FAISS and LLaMA, enabling real-time query handling for 2,000+ students.</li>
+                    <li>Integrated REST APIs for live course data, improving chatbot scalability and personalization.</li>
+                </ul>
+            </p>
+        </div>
+    </div>
 
-				</div>
-				<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2021-2023</span>
-						<h2>Senior System Engineer</h2>
-						<span class="position">Infosys Limited</span>
-						<p class="mt-4">Infosys Limited, a global technology consulting powerhouse, boasts a vast team of skilled professionals, delivering transformative solutions and driving digital innovation for businesses worldwide. 
-							<ul>
-								<li>Developed 10+ Power BI dashboards, enhancing banking data visualization and providing actionable insights into financial trends and performance.</li>
-								<li>Achieved a 0.32% increase in revenue by leveraging real-time analytics and KPIs to enhance client risk assessment.</li>
-								<li>Applied advanced SQL scripts to simulate client scenarios, optimizing testing efficacy and improving overall process accuracy.</li>
-							</ul>
-						</p>
-					</div>
+    <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+            <span class="date">2024</span>
+            <h2>ML Intern</h2>
+            <span class="position">Steve Madden, New York</span>
+            <p class="mt-4">Steve Madden is a global leader in footwear and fashion, leveraging analytics and AI to drive customer engagement.
+                <ul>
+                    <li>Built ML models and Power BI dashboards that boosted loyalty engagement by 12% through improved KPI tracking.</li>
+                    <li>Collaborated with marketing and store ops teams to apply K-Means, DBSCAN, and RFM segmentation on customer behavior data, uncovering actionable segments that improved email targeting and boosted online engagement.</li>
+                    <li>Implemented Generative AI to analyze and summarize thousands of customer reviews, enabling the merchandising team to detect emerging product trends 3x faster and reduce stock mismatches.</li>
+                </ul>
+            </p>
+        </div>
+    </div>
 
-				</div>
-							<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2021-2021</span>
-						<h2>Product Manager Intern</h2>
-						<span class="position">Society of Visual Impaired </span>
-						<p class="mt-4">The Society of Visual Impaired empowers individuals with visual impairments by providing resources, support, and advocacy.
-							<ul>
-								<li>Led a 25-member Agile team in developing a user-friendly website for the Rehabilitation Society of Visually Impaired, enhancing digital presence.</li>
-								<li>Implemented Scrum calls and Agile processes, ensuring efficient project management and timely delivery.</li>
-								<li>Managed training program in MongoDB, Express.js, Node.js, and production-level coding, resulting in a 30% increase in NGO visibility.</li>
-							</ul>
-						</p>
-					</div>
+    <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+            <span class="date">2022-2023</span>
+            <h2>Senior Data Scientist</h2>
+            <span class="position">Infosys Limited</span>
+            <p class="mt-4">Infosys Limited, a global technology consulting leader, delivering real-time analytics and digital innovation to major financial institutions.
+                <ul>
+                    <li>Led a 3-member team delivering real-time fraud analytics, mentoring junior scientists and reducing project delivery time by 20%.</li>
+                    <li>Built PySpark-Kafka pipelines to process 1TB+/day of banking data, enabling real-time fraud detection and reducing latency by 30%.</li>
+                    <li>Improved risk scoring by integrating external financial risk indicators into compliance models, enhancing high-risk client detection accuracy by 15%.</li>
+                </ul>
+            </p>
+        </div>
+    </div>
 
-				</div>
+    <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+            <span class="date">2021-2022</span>
+            <h2>Data Scientist</h2>
+            <span class="position">Infosys Limited</span>
+            <p class="mt-4">At Infosys, applied data science techniques to detect fraud, model financial risk, and optimize large-scale banking systems.
+                <ul>
+                    <li>Implemented fraud detection workflows using XGBoost, reducing fraudulent transactions by 68% and improving detection accuracy to 76%.</li>
+                    <li>Applied feature engineering on 5 years of historical data (2TB) with PySpark, and conducted ARIMA and Prophet time series analysis, improving model performance by 25% and early fraud detection by 40%.</li>
+                    <li>Analyzed 1.3B transactions to identify fraud trends, reducing false positives by 12% and enhancing audit strategies.</li>
+                    <li>Conducted due diligence analysis on client data, flagging 11% of partners as high-risk and improving compliance decision-making.</li>
+                </ul>
+            </p>
+        </div>
+    </div>
 
-				<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
-						<span class="date">2020-2021</span>
-						<h2>Intern</h2>
-						<span class="position">Incredible Solutions</span>
-						<p class="mt-4">Incredible Solutions, a startup committed to innovation and creativity, centered its services on delivering impactful solutions to clients.
-							<ul>
-								<li>Gathered data from the company and conducted analysis on products to gain insights and support decision-making processes.</li>
-								<li>Conducted thorough analysis and visualization using Python-based predictive models, aiding clients in competing in the market.</li>
-								<li>Analyzed customer purchase data using SQL queries to identify top buying trends, resulting in a 10% increase in sales.</li>
-							</ul>
-						</p>
-					</div>
+    <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+            <span class="date">2020-2021</span>
+            <h2>Data Scientist Intern</h2>
+            <span class="position">Incredible Solutions</span>
+            <p class="mt-4">Incredible Solutions, a startup committed to innovation, applied machine learning to healthcare and market analytics.
+                <ul>
+                    <li>Employed PCA for dimensionality reduction and trained ML models, achieving an AUC score of 0.85 with grid-search optimization, improving predictions by 15%.</li>
+                    <li>Enhanced model robustness through ensemble methods (stacking, bagging) and balanced classes with SMOTE, optimizing minority class predictions.</li>
+                    <li>Leveraged AWS (EC2, S3) for scalable data processing, boosting speed by 30% and enabling A/B testing that reduced healthcare costs by 12% while ensuring HIPAA compliance.</li>
+                </ul>
+            </p>
+        </div>
+    </div>
+</div>
 
-				</div>
+<br>
+<br>
 
-			</div>
-
-		<br>
-		<br>
-
-		<div class="row">
 			<h1 class="big-4">Education</h1>
 			<div class="underline"></div>
 		</div>
