--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <span class="date">2021-2022</span>
             <h2>Data Scientist</h2>
             <span class="position">Infosys Limited</span>
-            <p class="mt-4">At Infosys, applied data science techniques to detect fraud, model financial risk, and optimize large-scale banking systems.
+            <p class="mt-4">At Infosys, applied data science techniques to detect fraud, model financial risk, and optimize large-scale systems.
                 <ul>
                     <li>Implemented fraud detection workflows using XGBoost, reducing fraudulent transactions by 68% and improving detection accuracy to 76%.</li>
                     <li>Applied feature engineering on 5 years of historical data (2TB) with PySpark, and conducted ARIMA and Prophet time series analysis, improving model performance by 25% and early fraud detection by 40%.</li>
@@ -383,6 +383,22 @@
             </p>
         </div>
     </div>
+	<div class="col-md-6">
+  <div class="resume-wrap ftco-animate">
+    <span class="date">2021</span>
+    <h2>Product Manager Intern</h2>
+    <span class="position">Society of Visual Impaired</span>
+    <p class="mt-4">
+      The Society of Visual Impaired empowers individuals with visual impairments by providing resources, support, and advocacy.
+    </p>
+    <ul>
+      <li>Led a 25-member Agile team to build a user-friendly website for the Rehabilitation Society of Visually Impaired, enhancing digital presence.</li>
+      <li>Implemented Scrum ceremonies and Agile processes, ensuring efficient project management and timely delivery.</li>
+      <li>Managed training in MongoDB, Express.js, Node.js, and production-level coding, contributing to a 30% increase in NGO visibility.</li>
+    </ul>
+  </div>
+</div>
+
 
     <div class="col-md-6">
         <div class="resume-wrap ftco-animate">
