--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 			            <h2>Data Enthusiast</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.linkedin.com/in/shubham-patil19" class="btn btn-primary py-3 px-4"target="_blank">LinkedIn</a> 
+			            <p><a href="https://www.linkedin.com/in/shubham-shekhar-patil98/" class="btn btn-primary py-3 px-4"target="_blank">LinkedIn</a> 
 							<a href="https://github.com/shubhp19" class="btn btn-white btn-outline-white py-3 px-4"target="_blank">My work</a></p>
 		            </div>
 		          </div>
@@ -294,7 +294,7 @@
 									<span class="number" data-number="10">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/shubham-patil19/" class="btn btn-primary py-3 px-3"target="_blank">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/shubham-shekhar-patil98/" class="btn btn-primary py-3 px-3"target="_blank">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -312,7 +312,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Experienced Senior System Engineer with two years of experience as an Appian developer and one year as a data analyst. Expertise in Data Science, Machine Learning, and Business analysis. Currently pursuing a Master of Science in Information Systems at Syracuse University, with a solid foundation in Computer Engineering from the University of Mumbai (Bachelor's degree). Proven track record in project management and leveraging advanced analytics to deliver impactful results.</p>
+            <p> Data Scientist with 4+ years' experience in analytics engineering and GenAI. Proficient in Python, SQL, PySpark, and MPP data bases (Redshift, Snowflake), with strengths in ETL pipelines, dimensional modeling, BI reporting, and data validation </p>
           </div>
         </div>
 
@@ -446,7 +446,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1dUCQWBz6l0TMWQjbIH-uCTZ_j5g2nig6/view?usp=drive_link" class="btn btn-primary py-4 px-5"target="_blank">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1EKHpOLFyq5jYN_M4FMOQxH9fWjtM_s2C/view?usp=drive_link" class="btn btn-primary py-4 px-5"target="_blank">Download CV</a></p>
     			</div>
     		</div>
     	</div>
