--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 			            <h2>Data Enthusiast</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.linkedin.com/in/shubham-shekhar-patil98/" class="btn btn-primary py-3 px-4"target="_blank">LinkedIn</a> 
+			            <p><a href="https://www.linkedin.com/in/shubham-patil19/" class="btn btn-primary py-3 px-4"target="_blank">LinkedIn</a> 
 							<a href="https://github.com/shubhp19" class="btn btn-white btn-outline-white py-3 px-4"target="_blank">My work</a></p>
 		            </div>
 		          </div>
@@ -294,7 +294,7 @@
 									<span class="number" data-number="10">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/shubham-shekhar-patil98/" class="btn btn-primary py-3 px-3"target="_blank">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/shubham-patil19/ class="btn btn-primary py-3 px-3"target="_blank">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -446,7 +446,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1EKHpOLFyq5jYN_M4FMOQxH9fWjtM_s2C/view?usp=drive_link" class="btn btn-primary py-4 px-5"target="_blank">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1fgpAdVjmBtZn_Yg1bAx0hKJ-leXfByoM/view?usp=drive_link" class="btn btn-primary py-4 px-5"target="_blank">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -623,7 +623,7 @@
 							<span class="icon-globe"></span>
 						</div>
 						<h3 class="mb-4">Download Resume</h3>
-						<p><a href="https://drive.google.com/file/d/1dUCQWBz6l0TMWQjbIH-uCTZ_j5g2nig6/view?usp=drive_link" target="_blank">Resumelink</a></p>
+						<p><a href="https://drive.google.com/file/d/1fgpAdVjmBtZn_Yg1bAx0hKJ-leXfByoM/view?usp=drive_link" target="_blank">Resumelink</a></p>
 					</div>
 				</div>
 			</div>
